--- a/h2o/h2o.conf
+++ b/h2o/h2o.conf
@@ -1,6 +1,12 @@
 # to find out the configuration commands, run: h2o --help
 
-listen: 8080
+listen: 8000
+listen:
+  port: 8080
+  ssl:
+    certificate-file: /root/work/h2o/server.crt
+    key-file: /root/work/h2o/server.key
+
 hosts:
   "127.0.0.1.xip.io:8080":
     paths:
